Quorum3/Library/Tests/Inheritance/Pass/B6.quorum
class B6 
    action Main
        
    end
end