Quorum3/Library/Tests/Inheritance/Fail/D.quorum
class D is F
    action Main
        
    end
end